--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   "dependencies": {
     "@mdx-js/loader": "^2.0.0",
     "@next/mdx": "^12.0.10",
+    "esbuild": "^0.14.18",
+    "gray-matter": "^4.0.3",
+    "mdx-bundler": "^8.0.1",
     "next": "12.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1"
   },
   "devDependencies": {
     "eslint": "8.8.0",
