--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next/mdx": "^12.0.10",
     "esbuild": "^0.14.18",
     "gray-matter": "^4.0.3",
+    "material-icons": "^1.10.6",
     "mdx-bundler": "^8.0.1",
     "next": "12.0.10",
     "react": "17.0.2",
